# mock-login

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-dev-image.yaml
config/: users.yaml
src/: entrypoint.sh
src/mock_login/: dependencies.py  main.py  models.py  repository.py  service.py  utils.py
src/mock_login/routers/: main.py  oneall.py  testapp.py
src/static/: index.html  library.js  profile.html
